--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     <title>Barber Studio
      </title>
+	  <link rel="icon" href="image/footer-img.png" type="image/icon" />
      <script src="https://kit.fontawesome.com/d61baa15ed.js" crossorigin="anonymous"></script>
   </head>
   <body>
