--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="user">
             <img src="image/img-3.jpg" />
             <div class="user-info">
-              <h4>Bob Danial</h4>
+              <h4>BOB DANIAL</h4>
               <i class="fa fa-twitter"></i>
               <small>@bobdanial</small>
             </div>
