--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
             <h3>Hair Styling</h3>
             <hr />
             <p>
-              This is test under description of barber foundation this is test
-              under deacripation of barber foundation.
+              Hair can be considered an aspect of personal grooming, fashion, and cosmetics, although practical, cultural, and popular considerations also influence some hairstyles.
             </p>
           </div>
         </div>
@@ -124,8 +123,7 @@
             <h3>Beard Trim</h3>
             <hr />
             <p>
-              This is test under description of barber foundation this is test
-              under deacripation of barber foundation.
+             A beard can be a thing of beauty. From the carefully clipped goatee to the thick, full neck-warmer, facial hair is always a bold statement of style
             </p>
           </div>
         </div>
@@ -136,8 +134,7 @@
             <h3>Hair Cut</h3>
             <hr />
             <p>
-              This is test under description of barber foundation this is test
-              under deacripation of barber foundation.
+              Haircuts are a type of hairstyles where the hair has been cut shorter than before, these cuts themselves can be further modified with other hairstyles
             </p>
           </div>
         </div>
@@ -148,8 +145,7 @@
             <h3>Dry Hair</h3>
             <hr />
             <p>
-              This is test under description of barber foundation this is test
-              under deacripation of barber foundation.
+             Hair dryers are important tools for women and men who love to style their hair. With the tool, you can quickly blow dry your hair when you get out of the shower.
             </p>
           </div>
         </div>
