--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
             </div>
             <div class="feature-text">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing. Minus
-                explicabo odio mollitia, vel quam eaque nihil asperiores iusto
-                voluptatum fugiat reiciendis harum enim magni sint maxime, ullam
-                deleniti accusamus facere?
+                he stylists at the Hair Experience are modern, professional hair artists. Their talent and skill bring out the best in their clients, making the Hair Experience customers happy, beautiful, and loyal. Clients leave smiling after they have enjoyed the full pleasure and creativity of the Hair Experience staff.
               </p>
             </div>
           </div>
@@ -71,10 +68,7 @@
             </div>
             <div class="feature-text">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing. Minus
-                explicabo odio mollitia, vel quam eaque nihil asperiores iusto
-                voluptatum fugiat reiciendis harum enim magni sint maxime, ullam
-                deleniti accusamus facere?
+                We offer online booking!Staying fresh and looking your best means regular grooming. Don’t let the inconvenience of making a booking get in the way of your appearance. We’ve made it as easy as possible to book in your next appointment
               </p>
             </div>
           </div>
@@ -85,10 +79,7 @@
             </div>
             <div class="feature-text">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing. Minus
-                explicabo odio mollitia, vel quam eaque nihil asperiores iusto
-                voluptatum fugiat reiciendis harum enim magni sint maxime, ullam
-                deleniti accusamus facere?
+               A barber shop price list is a list on which the barber includes detail of the services that he provides along with rates of each service. This includes the services like hair cutting, hair trimming; shaving, hot bath etc. barbers put these price lists that include all the services they offer outside their shop on the glass so that the walking people and customers can see the price for each service without asking the barber.
               </p>
             </div>
           </div>
