--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="feature-text">
               <p>
-                he stylists at the Hair Experience are modern, professional hair artists. Their talent and skill bring out the best in their clients, making the Hair Experience customers happy, beautiful, and loyal. Clients leave smiling after they have enjoyed the full pleasure and creativity of the Hair Experience staff.
+                The stylists at the Hair Experience are modern, professional hair artists. Their talent and skill bring out the best in their clients, making the Hair Experience customers happy, beautiful, and loyal. Clients leave smiling after they have enjoyed the full pleasure and creativity of the Hair Experience staff.
               </p>
             </div>
           </div>
